Fix whitespace issues in scss files

--- a/src/instruments/forms/TextField/styles.scss
+++ b/src/instruments/forms/TextField/styles.scss
@@ -1,7 +1,6 @@
 .disabled {
-    background-image: none;
-    opacity: 0.6;
-    pointer-events: none;
-    filter: grayscale(100%)
-  }
-  
+  background-image: none;
+  opacity: 0.6;
+  pointer-events: none;
+  filter: grayscale(100%);
+}
